<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<TextView
		android:id="@+id/txtGuess"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/guess_the_number"
		android:textSize="38sp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/txtGuessNumber"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintVertical_bias=".4"/>

	<TextView
		android:id="@+id/txtGuessNumber"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="128"
		android:textSize="48sp"
		android:labelFor="@id/layoutButtons"
		app:layout_constraintStart_toStartOf="@id/layoutButtons"
		app:layout_constraintEnd_toEndOf="@id/layoutButtons"
		app:layout_constraintTop_toTopOf="@id/txtGuess"
		app:layout_constraintBottom_toTopOf="@id/layoutButtons"
		app:layout_constraintVertical_bias=".75"/>

	<LinearLayout
		android:id="@+id/layoutButtons"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintVertical_bias=".58">

		<Button
			android:id="@+id/btnDecreaseTen"
			android:layout_width="75dp"
			android:layout_height="75dp"
			android:text="@string/lt_lt"
			android:textSize="24sp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			tools:ignore="ButtonStyle" />

		<Button
			android:id="@+id/btnDecreaseOne"
			android:layout_width="75dp"
			android:layout_height="75dp"
			android:text="@string/lt"
			android:textSize="24sp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			tools:ignore="ButtonStyle" />

		<Button
			android:id="@+id/btnIncreaseOne"
			android:layout_width="75dp"
			android:layout_height="75dp"
			android:text="@string/gt"
			android:textSize="24sp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			tools:ignore="ButtonStyle" />

		<Button
			android:id="@+id/btnIncreaseTen"
			android:layout_width="75dp"
			android:layout_height="75dp"
			android:text="@string/gt_gt"
			android:textSize="24sp"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			tools:ignore="ButtonStyle" />

	</LinearLayout>

	<Button
		android:id="@+id/btnSubmitGuess"
		android:layout_width="200sp"
		android:layout_height="50sp"
		app:layout_constraintTop_toBottomOf="@id/layoutButtons"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		android:text="@string/submit"
		android:textSize="24sp"
		app:layout_constraintVertical_bias=".7"/>

</androidx.constraintlayout.widget.ConstraintLayout>